# icmsg-rs

./: Cargo.toml  README.md
examples/embassy-zephyr-nrf5340/: .gitignore  README.md
examples/embassy-zephyr-nrf5340/app-core/: Cargo.toml  build.rs  memory.x
examples/embassy-zephyr-nrf5340/app-core/src/: main.rs
examples/embassy-zephyr-nrf5340/net-core/: CMakeLists.txt  prj.conf  west.yml
examples/embassy-zephyr-nrf5340/net-core/src/: main.c
examples/embassy-zephyr/app-core/: Cargo.toml
examples/embassy-zephyr/app-core/src/: main.rs
examples/embassy-zephyr/net-core/: CMakeLists.txt
examples/trouble-sdc-nrf5340/: Justfile  Makefile
examples/trouble-sdc-nrf5340/app-core/: Cargo.toml  build.rs  memory.x
examples/trouble-sdc-nrf5340/app-core/.cargo/: config.toml
examples/trouble-sdc-nrf5340/app-core/src/: ble_bas_peripheral_bonding.rs  fake_rng.rs  init.rs  main.rs  transport.rs  uninit_write_buf.rs
examples/trouble-sdc-nrf5340/net-core/: Cargo.toml  build.rs  memory.x
examples/trouble-sdc-nrf5340/net-core/.cargo/: config.toml
examples/trouble-sdc-nrf5340/net-core/src/: cmd_dispatch.rs  main.rs
src/: lib.rs  loom.rs  poll.rs  transport.rs
