[package]
name = "icmsg"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Rust implementation of the ICMsg IPC backend"
keywords = ["embedded", "async", "ipc"]
categories = ["embedded", "no-std::no-alloc", "asynchronous"]
repository = "https://github.com/0e4ef622/icmsg-rs"
exclude = ["/examples"]

[dependencies]
elain = "0.3.1"
embassy-futures = "0.1.1"
embedded-hal-async = "1.0.0"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
