[package]
name = "app-core"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.8.0", features = ["nrf5340-app-s", "time-driver-rtc1", "gpiote", "time", "unstable-pac"] }
embassy-time = "0.5.0"
embassy-futures = "0.1.2"

cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
panic-probe = { version = "1", features = ["print-rtt"] }
rtt-target = "0.6.1"
icmsg = { path = "../../.." }
static_cell = "2.1.0"

[profile.release]
debug = 2
