[package]
name = "app-core"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = {  git = "https://github.com/embassy-rs/embassy", rev = "refs/pull/4186/merge", features = ["arch-cortex-m", "executor-thread"] }
embassy-nrf = {  git = "https://github.com/embassy-rs/embassy", rev = "refs/pull/4186/merge", features = ["nrf5340-app-s", "time-driver-rtc1", "gpiote", "time", "unstable-pac"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "refs/pull/4186/merge" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "refs/pull/4186/merge" }

cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
panic-probe = { version = "1", features = ["print-rtt"] }
rtt-target = "0.6.1"
icmsg = { path = "../../.." }
static_cell = "2.1.0"

[profile.release]
debug = 2
