[package]
name = "app-core"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.1", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.7.0", features = ["nrf5340-app-s", "defmt", "time-driver-rtc1", "gpiote", "time", "unstable-pac"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }

cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
panic-probe = { version = "1", features = ["print-rtt"] }
icmsg = { path = "../../.." }
static_cell = "2.1.1"
defmt = "1.0.1"
bt-hci = { version = "0.6.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", features = ["defmt", "peripheral", "controller-host-flow-control"] }

[profile.release]
debug = 2
