[package]
name = "app-core"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.1", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.8.0", features = ["nrf5340-app-s", "defmt", "time-driver-rtc1", "gpiote", "time", "unstable-pac"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime-ms"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }

cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
panic-probe = { version = "1", features = ["defmt", "print-defmt"] }
icmsg = { path = "../../..", features = ["defmt"] }
static_cell = "2.1.1"
defmt = "1.0.1"
bt-hci = { version = "0.6.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", features = ["defmt", "controller-host-flow-control", "peripheral", "gatt", "derive", "security", "dev-disable-csprng-seed-requirement"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage-async = "0.4.1"
sequential-storage = { version = "5.0.1", features = ["defmt-03"] }
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }

[profile.release]
debug = 2
lto = "fat"
opt-level = "z"
codegen-units = 1

[patch.crates-io]
# needs https://github.com/embassy-rs/bt-hci/pull/63
bt-hci = { git = "https://github.com/embassy-rs/bt-hci" }
